syntax = "proto3";

package auth;
option go_package = "github.com/SomeHowMicroservice/shm-be/services/auth/protobuf";

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);

  // rpc VerifySignUp(VerifySignUpRequest) returns (VerifySignUpResponse);

  // rpc SignIn(SignInRequest) returns (SignInResponse);
}

// message UserResponse {
//   string id = 1;
//   string username = 2;
//   string email = 3;
//   string created_at = 5;
// }

message SignUpRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message SignUpResponse {
  string registration_token = 1;
  string message = 2;
}

// message VerifySignUpRequest {
//   string registration_token = 1;
//   string otp = 2;
// }

// message VerifySignUpResponse {
//   string access_token = 1;
//   int64 access_expires_in = 2;
//   string refresh_token = 3;
//   int64 refresh_expires_in = 4;
//   UserResponse user = 5;
//   string message = 6;
// }

// message SignInRequest {
//   string username = 1;
//   string password = 2;
// }

// message SignInResponse {
//   string access_token = 1;
//   int64 access_expires_in = 2;
//   string refresh_token = 3;
//   int64 refresh_expires_in = 4;
//   UserResponse user = 5;
//   string message = 6;
// }